--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "pomodoro-clock",
+  "name": "pomodoro-timer",
   "version": "0.1.0",
+  "homepage": "https://blogscot.github.io/pomodoro-timer/",
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
@@ -12,6 +13,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -29,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
